invalid_var_type_arg_keywords_test/invalid_var_type_arg_keywords_test_7.src
.IPPcode24
READ GF@a GF@b